--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
 @tailwind base;
+@tailwind components;
 @tailwind utilities;
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
