--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,3 @@
-<p>button works!</p>
+<button mat-icon-button [color]="config.color" (click)="config.action()">
+  <mat-icon>{{ config.iconName }}</mat-icon>
+</button>
