--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<mat-card class="app-header">
+  <mat-card-header class="w-full">
+    <mat-card-title>
+      <div class="flex justify-between items-center">
+        <ng-container [ngTemplateOutlet]="title"
+                      [ngTemplateOutletContext]="{data:{type: config.type,title: config.title}}"></ng-container>
+        <ng-content></ng-content>
+      </div>
+    </mat-card-title>
+  </mat-card-header>
+</mat-card>
+
+
+<ng-template #title let-data="data">
+  <ng-container [ngSwitch]="data.type">
+    <h6 *ngSwitchCase="6">{{ data.title }}</h6>
+    <h5 *ngSwitchCase="5">{{ data.title }}</h5>
+    <h4 *ngSwitchCase="4">{{ data.title }}</h4>
+    <h3 *ngSwitchCase="3">{{ data.title }}</h3>
+    <h2 *ngSwitchCase="2">{{ data.title }}</h2>
+    <h1 *ngSwitchCase="1">{{ data.title }}</h1>
+    <p *ngSwitchDefault [class]="fontSize">{{ data.title }}</p>
+  </ng-container>
+</ng-template>
