--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -5,15 +5,17 @@
               opened="true">
     <app-user-info></app-user-info>
     <app-groups></app-groups>
-    <app-header [config]="{title: 'header1',fontSize: TailwindFontSizeEnum.xs, type: HeaderType.Custom}">
-      <app-button [config]="{iconName: 'add',color: 'primary',action: action.bind(this)}"></app-button>
+    <app-header>
+      <app-title class="title" [config]="{title: 'header1',size: TailwindFontSizeEnum.xs, type: HeaderType.Custom}"></app-title>
+      <app-button class="button" [config]="{iconName: 'add',color: 'primary',action: action.bind(this)}"></app-button>
     </app-header>
     <app-selection-list></app-selection-list>
   </mat-drawer>
   <main class="p-4">
     <app-toolbar></app-toolbar>
-    <app-header [config]="{title: 'header2',fontSize: TailwindFontSizeEnum.sm, type: HeaderType.Custom}">
-      <app-button [config]="{iconName: 'add',color: 'primary',action: action.bind(this)}"></app-button>
+    <app-header>
+      <app-title class="title" [config]="{title: 'header2',size: TailwindFontSizeEnum.base, type: HeaderType.Custom}"></app-title>
+      <app-button class="button" [config]="{iconName: 'add',color: 'primary',action: action.bind(this)}"></app-button>
     </app-header>
     <app-detailed-list></app-detailed-list>
   </main>
