--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="h-full" autosize>
   <mat-drawer #drawer
-              class="p-4"
+              class="p-4 min-w-[300px]"
               mode="side"
               opened="true">
     <app-user-info></app-user-info>
