--- a/src/app/components/selection-list/list-item/list-item.component.html
+++ b/src/app/components/selection-list/list-item/list-item.component.html
@@ -1,1 +1,4 @@
-<p>list-item works!</p>
+<li class="app-list-item flex justify-between items-center p-2">
+  <div>{{item.name}}</div>
+  <div>{{item.itemsCount}}</div>
+</li>
