--- a/src/app/components/selection-list/list.component.html
+++ b/src/app/components/selection-list/list.component.html
@@ -1,1 +1,5 @@
-<p>list works!</p>
+<ul class="app-selection-list flex flex-col gap-2">
+  @for (item of items; track item.name) {
+    <app-selection-list-item [item]="item"></app-selection-list-item>
+  }
+</ul>
