feat: - create language service - create dateTime service - set up basic expansion list content - create generic input-component - create todo component - create tag component - create datepicker component

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -17,7 +17,7 @@
       <app-title class="title" [config]="{title: 'header2',size: TailwindFontSizeEnum.base, type: HeaderType.Custom}"></app-title>
       <app-button class="button" [config]="{iconName: 'add',color: 'primary',action: action.bind(this)}"></app-button>
     </app-header>
-    <app-detailed-list></app-detailed-list>
+    <app-expansion-list></app-expansion-list>
   </main>
 
 </mat-drawer-container>
