--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,3 +1,3 @@
-<p>{{todo.description}}</p>
+<app-input [config]="{control: todoService.todoDescriptionControl,events: []}"></app-input>
 <app-tags [tags]="todo.tags"></app-tags>
 <app-datepicker></app-datepicker>
