--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,3 +1,10 @@
-<app-input [config]="{control: todoService.todoDescriptionControl,events: []}"></app-input>
-<app-tags [tags]="todo.tags"></app-tags>
-<app-datepicker></app-datepicker>
+<div class="border-[1px] border-black rounded-xl p-4">
+  <mat-checkbox [checked]="todo?.isCompleted"></mat-checkbox>
+  <!--todo focus out event for input-->
+  <app-input
+    *ngIf="!todo?.id"
+    [config]="{control: todoService.todoDescriptionControl,events: [],placeholder: 'Enter description'}"></app-input>
+  <div *ngIf="todo?.id">{{ todoService.todoDescriptionControl?.value }}</div>
+  <app-tags [tags]="todo?.tags ? todo.tags : []"></app-tags>
+  <app-datepicker></app-datepicker>
+</div>
