fix input config

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,4 +1,4 @@
 <div class="app-input width-full px-2">
   <input [formControl]="config.control" #input type="text"
-         [placeholder]="config.placeholder ? config.placeholder :'New tag'">
+         [placeholder]="config.placeholder ? config.placeholder :'Enter text...'">
 </div>
