front-end login form

--- a/src/app/components/datepicker/datepicker.component.html
+++ b/src/app/components/datepicker/datepicker.component.html
@@ -5,8 +5,8 @@
 <!--  <mat-datepicker-toggle matIconPrefix [for]="datepicker"></mat-datepicker-toggle>-->
 <!--  <mat-datepicker #datepicker>-->
 <!--    <mat-datepicker-actions>-->
-<!--      <button mat-button matDatepickerCancel>Cancel</button>-->
-<!--      <button mat-raised-button color="primary" matDatepickerApply>Apply</button>-->
+<!--      <icon-button mat-icon-button matDatepickerCancel>Cancel</icon-button>-->
+<!--      <icon-button mat-raised-icon-button color="primary" matDatepickerApply>Apply</icon-button>-->
 <!--    </mat-datepicker-actions>-->
 <!--  </mat-datepicker>-->
 <!--</mat-form-field>-->
