--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,2 +1,23 @@
-<p>login works!</p>
-<a routerLink="" [queryParams]="{'authenticated':'true'}">To the app</a>
+<div class="auth-container">
+  <mat-tab-group [disablePagination]="true" headerPosition="above" animationDuration="250"
+                 (selectedTabChange)="onTabChange()" dynamicHeight>
+    <mat-tab label="SignIn">
+      <form class="flex flex-col justify-center items-center" [formGroup]="authService.form"
+            (ngSubmit)="signIn()">
+        <app-input [config]="emailInputConfig">Email</app-input>
+        <app-input [config]="passwordInputConfig">Password</app-input>
+        <app-button color="primary" type="submit"><input type="submit" value="Login"></app-button>
+      </form>
+    </mat-tab>
+    <mat-tab label="SignUp">
+      <form class="flex flex-col justify-center items-center" (submit)="signUp()">
+        <app-input [config]="emailInputConfig">Email</app-input>
+        <app-input [config]="passwordInputConfig">Password</app-input>
+        <app-button color="primary" type="submit"><input type="submit" value="Register"></app-button>
+      </form>
+    </mat-tab>
+  </mat-tab-group>
+  <div class="flex gap-1">
+  </div>
+</div>
+
