--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button [color]="config.color" (click)="config.action()">
-  <mat-icon [fontIcon]="config.iconName"></mat-icon>
+<button mat-flat-button [color]="color" [type]="type">
+  <ng-content></ng-content>
 </button>
