complete authentication and authorization: - add loading spinner between requests - add error dialog interceptor - write frontend guards - temporary add logout to user-logo - implement loading interceptor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+@if (loadingService.loadingSub | async) {
+  <mat-spinner diameter="75" class="app-spinner"></mat-spinner>
+} @else {
+  <router-outlet></router-outlet>
+}
+
+
