--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,11 +1,13 @@
-<div class="border-[1px] border-black rounded-xl p-4">
-  <mat-checkbox [checked]="todo?.isCompleted"></mat-checkbox>
+<div class="border-[1px] border-black rounded-xl p-4 relative" [class.loading-overlay]="todoService.isLoading | async">
+  <!--  make directive for spinner-->
+  <mat-spinner *ngIf="todoService.isLoading | async" diameter="50" class="feature-spinner"></mat-spinner>
+  <mat-checkbox [checked]="todo?.iscompleted" (change)="onCheckboxChange($event)"></mat-checkbox>
   <!--todo focus out event for input-->
   <app-input
     *ngIf="!todo?.id"
-    (afterConfiguration)="onConfiguration()"
+    (inputInit)="onInputInit()"
     [config]="inputConfig"></app-input>
   <div *ngIf="todo?.id">{{ todoService.todoDescriptionControl.value }}</div>
-  <app-tags [tags]="todo?.tags ? todo.tags : []"></app-tags>
+  <app-tags [todo]="todo"></app-tags>
   <app-datepicker></app-datepicker>
 </div>
