--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,5 +1,8 @@
-.main-drawer-container > .mat-drawer-inner-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+.main-drawer-container {
+  .mat-drawer-inner-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
+
