--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -1,7 +1,22 @@
-<section class="tags-container flex justify-start items-center gap-2">
-  @for (tag of todo?.tags ? todo.tags : []; track tag) {
-    <app-tag [tag]="tag"></app-tag>
-  }
-  <app-input [config]="inputConfig" (inputInit)="onInputInit()"></app-input>
-</section>
-
+<mat-form-field class="w-full">
+  <mat-chip-grid #chipGrid aria-label="Enter fruits">
+    @for (tag of todo.tags; track tag) {
+      <mat-chip-row
+        (removed)="remove(tag)"
+        [editable]="true"
+        (edited)="edit(tag, $event)"
+        [aria-description]="'press enter to edit ' + tag">
+        {{tag}}
+        <button matChipRemove [attr.aria-label]="'remove ' + tag">
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </mat-chip-row>
+    }
+    <input placeholder="New tag..."
+           (blur)="updateTags()"
+           [matChipInputFor]="chipGrid"
+           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+           [matChipInputAddOnBlur]="addOnBlur"
+           (matChipInputTokenEnd)="add($event)"/>
+  </mat-chip-grid>
+</mat-form-field>
