--- a/src/app/components/expansion-list/expansion-list.component.html
+++ b/src/app/components/expansion-list/expansion-list.component.html
@@ -1,19 +1,14 @@
 <mat-accordion multi>
-    @for (list of lists; track list.id; let index = $index) {
+  @for (list of lists; track list.id; let listIndex = $index; let last = $last) {
 
-      <mat-expansion-panel class="app-expansion-panel !m-0" expanded="false">
-        <mat-expansion-panel-header expandedHeight="48px" class="app-expansion-header">
-          <app-input [config]="configs[index]" (inputInit)="onInputInit(index)"></app-input>
-        </mat-expansion-panel-header>
-        @for (todo of list.items; track todo.name) {
-          <app-todo [todo]="todo"></app-todo>
-        }
-      </mat-expansion-panel>
-    }
-    <mat-expansion-panel class="app-expansion-panel !m-0" expanded="true">
+    <mat-expansion-panel class="app-expansion-panel !m-0" [expanded]="last">
       <mat-expansion-panel-header expandedHeight="48px" class="app-expansion-header">
-        New
+        <app-input [config]="configs[listIndex]" (inputInit)="onInputInit(listIndex)"></app-input>
       </mat-expansion-panel-header>
-      <app-todo></app-todo>
+      @for (todo of list.items; track todo.name;let todoIndex = $index) {
+        <app-todo (onComplete)="completeTodo(todoIndex,listIndex)" [listId]="list.id" [todo]="todo"></app-todo>
+      }
+      <app-todo (onCreate)="addEmptyTodo($event,listIndex)" [listId]="list.id"></app-todo>
     </mat-expansion-panel>
+  }
 </mat-accordion>
