--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -15,7 +15,7 @@
     <app-toolbar></app-toolbar>
     <app-header>
       <app-title class="title" [config]="{title: 'header2',size: TailwindFontSizeEnum.base, type: HeaderType.Custom}"></app-title>
-      <app-icon-button class="button" [config]="{iconName: 'add',color: 'primary',action: action.bind(this)}"></app-icon-button>
+      <app-icon-button class="button" [config]="{iconName: 'add',color: 'primary',action: openCreteListDialog.bind(this)}"></app-icon-button>
     </app-header>
     <app-expansion-list [lists]="lists"></app-expansion-list>
   </main>
