--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <mat-card class="app-header">
   <mat-card-header class="w-full">
-    <mat-card-title>
+    <mat-card-title class="app-header-title">
       <div class="flex justify-between items-center">
         <ng-content select=".title"></ng-content>
-        <ng-content select=".button"></ng-content>
+        <ng-content select=".count"></ng-content>
       </div>
     </mat-card-title>
   </mat-card-header>
