--- a/src/app/dialogs/create-list-dialog/create-list-dialog.component.html
+++ b/src/app/dialogs/create-list-dialog/create-list-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Error</h2>
+<h2 mat-dialog-title>Create list</h2>
 <mat-dialog-content>
   <form>
     <app-input [config]="nameInputConfig"></app-input>
