--- a/src/app/components/groups/group-item/group-item.component.html
+++ b/src/app/components/groups/group-item/group-item.component.html
@@ -1,7 +1,7 @@
 <section class="todo-group flex justify-between items-start">
   <div>
-    <mat-icon color="primary" fontIcon="home"></mat-icon>
-    <p>{{groupItem.name}}</p>
+    <mat-icon color="primary" [fontIcon]="config.icon"></mat-icon>
+    <p>{{config.name}}</p>
   </div>
-  <div>{{groupItem.containItems}}</div>
+  <div>{{group.count}}</div>
 </section>
